<?xml version="1.0"?>
<package>
  <name>test_concert</name>
  <version>0.0.0</version>
  <description>The test_concert package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jihoonl@todo.todo">jihoonl</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>concert_master</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rocon_apps</run_depend>

  <export>
    <rocon_app>rapps/dummy_teleop/dummy_teleop.rapp</rocon_app>
  </export>
</package>
